# DataPulse

./: .gitignore  README.md  pyproject.toml  session.json  setup.py
src/data/: continousdata.py  source.py
src/data_processing/: data_cleaning.py  data_transformation.py
src/data_retrieval/: csv_retrieval.py  sql_retrieval.py
src/data_retrieval/static/: csv.py  nosql.py  sql.py
src/dataprocessing/: datatransform.py
src/dataprocessing/transform/: continuoustransform.py
src/datapulse/data/: continousdata.py  staticdata.py
src/datapulse/dataprocessing/cleaning/: continuouscleaning.py  staticcleaning.py
src/datapulse/dataprocessing/transform/: statictransform.py
src/datapulse/datasource/: continoussource.py  staticsource.py
src/datapulse/datasource/static/: nosql.py
src/datapulse/pipeline/: continuouspipeline.py  staticpipeline.py
src/datapulse/visualization/: plot.py  tab.py
src/datapulse/visualization/plots/: bar_chart.py  calendar_chart.py  line_chart.py  pie_chart.py  scatter_plot.py
src/datasource/: datasource.py
src/datasource/static/: csv.py  sql.py
src/types/: source.py
src/ui/desktop/: about_window.py  main_window.py  setting_window.py
src/ui/web/: structure idea.md
src/visualization/: bar_chart.py  calendar.py  line_chart.py  pie_chart.py  plot.py  scatter_plot.py
src/visualization/plots/: bar_chart.py
test/data_retrieval/: csv_retrieval.py  sql_retrieval.py
test/data_source/: csv.py  sql.py  sql_retrieval.py
test/example/: tasks.py
test/visualization/: charts.html  charts.py
tools/: .gitignore  retrieve.py
